# cfn-ia-rules

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
cfn_ia_rules/: __init__.py  common.py
cfn_ia_rules/rules/: __init__.py
cfn_ia_rules/rules/best_practice/: s3_versioning.py
cfn_ia_rules/rules/mandatory/: Casing.py  Descriptions.py  Groups.py  InclusiveLanguage.py  Labels.py  ParamsDefinedAreUsed.py  ParamsInMetadataExist.py  SentenceCase.py  __init__.py  casing.py  descriptions.py  groups.py  inclusive_language.py  labels.py  params_defined_are_used.py  params_in_metadata_exist.py  sentence_case.py
cfn_ia_rules/rules/security/: EBSVolumeEncryption.py  EFSFilesystemEncryptionEnabled.py  IAMActionWildcard.py  IAMExcludeReason.py  IAMNoAccountNumber.py  IAMNotAction.py  IAMNotResource.py  IAMPartition.py  IAMResourceWildcard.py  LambdaRuntimeEOL.py  NoDefaultAndEcho.py  PrincipalWildcard.py  ProhibitedResources.py  RequiredResourceProperties.py  StorageEncryptionEnabled.py  ValidateIAMExclusions.py  __init__.py  ebs_volume_encryption.py  efs_file_system_encryption_enabled.py  iam_action_wildcard.py  iam_exclude_reason.py  iam_no_account_number.py  iam_not_action.py  iam_not_resource.py  iam_partition.py  iam_resource_wildcard.py  lambda_runtime_eol.py  no_default_and_echo.py  principal_wildcard.py  prohibited_resource_properties.py  prohibited_resources.py  required_resource_properties.py  s3_bucket_encryption.py  s3_versioning.py  (+2 more)
test_ia_lint_rules/: __init__.py  cfnlint_exit_code_wrapper.py
test_ia_lint_rules/security/: EBSVolumeEncryption.py
(+11 files in other folders)
