[tool.poetry]
name = "cfn_ia_rules"
version = "0.0.1"
description = "aws-ia rules for cfn-lint"
authors = ["aws-ia"]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.13,<4"
cfn-lint = ">=0.74.3,<1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

