[tool.poetry]
name = "cfn_ia_rules"
version = "0.0.1"
description = "aws-ia rules for cfn-lint"
authors = ["aws-ia"]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.13,<4"
cfn-lint = ">=0.74.3,<1"
policyuniverse = ">=1.5,<2"
six = ">=1.16,<2"
spellchecker = ">=0.7.2,<1"

[tool.poetry.dev-dependencies]
bandit = ">=1.7,<2"
black = ">=23.3,<24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

